# football-tables

./: .activate.sh  .gitignore  README.md  config.py  get_table.py  main.py  noxfile.py  pyproject.toml  show_table.py
.config/: configuration.json
.env/: activate.sh
.github/workflows/: python-app.yml
football/: __main__.py  assets.py  cli.py  format_tables.py  get_table.py  helper_functions.py  prune.py  show_table.py
football/common/: all_time_helper.py  clean_me.py  clean_me_helper.py  config.py  format_tables.py  h2h_helper.py  harry_styles.py  helper_functions.py  league_page_helper.py  readme.py
football/tests/: test_basics.py  test_clean.py  test_cli.py  test_football.py  test_helpers.py
football/tui/: football_app.py  interactive.py  screens.py  somebody_test_me.py  st.tcss  styling.tcss  the_table.py
football/tui/to_remove/: outdated.py
football/tui/widgets/: screens.py  the_table.py
football/tui/widgets/screens_file/: all_time_screen.py  h2h_screen.py  individual_club.py  league_screen.py  screens.py
src/football/: __main__.py  config.py  football_app.py  format_tables.py  get_table.py  show_table.py  styling.tcss
src/football.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/football/.config/: configuration.json
