[build-system]
requires = ["setuptools>=65", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "football"
description = "Footingtons!"
dynamic = ["version"]
dependencies = [
    "argcomplete",
    "argparse",
    "rich",
    "pandas",
    "numpy",
    "bs4",
    "requests",
    "inquirer",
    "typing",
    "pre-commit",
    "textual",
    "textual_serve",
    "rich_pixels",
]

# requires-python = ">=3.8"

[project.scripts]
football = "football.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["football", "football*"]
namespaces = false

[tool.setuptools_scm]

# ----------------------------------------------------------------
# Linter and formatter settings
# ----------------------------------------------------------------
[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "BLE",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PIE",
    "PL",
    "PT",
    "RUF",
    "S",
    "UP",
    "W",
]
