[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "football"
description = "Footingtons!"
dynamic = ["version"]
dependencies = [
    "argcomplete",
    "argparse",
    "rich",
    "pandas",
    "numpy",
    "bs4",
    "requests",
    "inquirer",
    "typing",
    "pre-commit",
    "textual",
    "textual_serve",
    "rich_pixels",
    "textual_plotext",
    "pytest",
    "pytest-asyncio",
]

# requires-python = ">=3.8"

[project.scripts]
football = "football.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["football", "football*"]
namespaces = false

[tool.setuptools_scm]

# ----------------------------------------------------------------
# Linter and formatter settings
# ----------------------------------------------------------------
[tool.black]
line-length = 90

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 90

[tool.ruff.lint]
select = [
    "ARG",
    "B",
    "BLE",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PIE",
    "PL",
    "PT",
    "RUF",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.per-file-ignores]
"football/tests/*.py" = ["S101"]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "session"
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s][%(filename)s:%(lineno)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
